# aloe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
aloe/: CMakeLists.txt
aloe/src/: aloe.cpp
demo/: CMakeLists.txt
demo/include/: demo.h
demo/src/: demo.cpp
engine/: CMakeLists.txt
engine/include/: aloe.h  app.h  log.h
engine/include/events/: event.h
engine/src/: aloe.cpp  app.cpp  log.cpp
engine/src/events/: event.cpp
